# tfs_dnn

./: CMakeLists.txt  LICENSE  Makefile  README.md
.build/: dnn_test1.dnn
src/: BinaryStream.cpp  BinaryStream.h  CMakeLists.txt  Constants.h  Constants.hpp  CsvFile.cpp  CsvFile.h  CsvFile.hpp  Dnn.cpp  Dnn.h  Dnn.hpp  DnnBuilder.cpp  DnnBuilder.h  DnnBuilder.hpp  DnnLayer.cpp  DnnLayer.h  DnnLayer.hpp  DnnLayerConvolution.cpp  DnnLayerConvolution.h  DnnLayerConvolution.hpp  DnnLayerDeconvolution.cpp  DnnLayerDeconvolution.h  DnnLayerDeconvolution.hpp  DnnLayerDropout.cpp  DnnLayerDropout.h  DnnLayerDropout.hpp  DnnLayerFullyConnected.cpp  DnnLayerFullyConnected.h  DnnLayerFullyConnected.hpp  DnnLayerInput.cpp  DnnLayerInput.h  DnnLayerInput.hpp  DnnLayerLocalResponseNormalization.cpp  DnnLayerLocalResponseNormalization.h  DnnLayerLocalResponseNormalization.hpp  DnnLayerMaxout.cpp  DnnLayerMaxout.h  DnnLayerMaxout.hpp  DnnLayerPool.cpp  DnnLayerPool.h  (+54 more)
test/: CMakeLists.txt  Makefile  TestMatrix.cpp  TestMatrix.hpp  main.cpp  test2D.cpp  test2D.hpp  test2Layer.cpp  test2Layer.hpp  testBuilder.cpp  testBuilder.hpp  testCifar10.cpp  testCifar10.hpp  testCircle.cpp  testCircle.hpp  testFullyConnected.cpp  testFullyConnected.hpp  testIO.cpp  testIO.hpp  testSpiral.cpp  testSpiral.hpp
