cmake_minimum_required(VERSION 3.5)
project(tfs_dnn)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    src/BinaryStream.cpp
    src/BinaryStream.h
    src/Constants.h
    src/CsvFile.cpp
    src/CsvFile.h
    src/Dnn.cpp
    src/Dnn.h
    src/DnnBuilder.cpp
    src/DnnBuilder.h
    src/DnnLayer.cpp
    src/DnnLayer.h
    src/DnnLayerConvolution.cpp
    src/DnnLayerConvolution.h
    src/DnnLayerDeconvolution.cpp
    src/DnnLayerDeconvolution.h
    src/DnnLayerDropout.cpp
    src/DnnLayerDropout.h
    src/DnnLayerFullyConnected.cpp
    src/DnnLayerFullyConnected.h
    src/DnnLayerInput.cpp
    src/DnnLayerInput.h
    src/DnnLayerLocalResponseNormalization.cpp
    src/DnnLayerLocalResponseNormalization.h
    src/DnnLayerMaxout.cpp
    src/DnnLayerMaxout.h
    src/DnnLayerPool.cpp
    src/DnnLayerPool.h
    src/DnnLayerRectifiedLinearUnit.cpp
    src/DnnLayerRectifiedLinearUnit.h
    src/DnnLayerRegression.cpp
    src/DnnLayerRegression.h
    src/DnnLayers.h
    src/DnnLayerSigmoid.cpp
    src/DnnLayerSigmoid.h
    src/DnnLayerSoftmax.cpp
    src/DnnLayerSoftmax.h
    src/DnnLayerSupportVectorMachine.cpp
    src/DnnLayerSupportVectorMachine.h
    src/DnnLayerTanh.cpp
    src/DnnLayerTanh.h
    src/DnnStream.cpp
    src/DnnStream.h
    src/DnnTrainer.cpp
    src/DnnTrainer.h
    src/DnnTrainerAdaDelta.cpp
    src/DnnTrainerAdaDelta.h
    src/DnnTrainerAdam.cpp
    src/DnnTrainerAdam.h
    src/DnnTrainerSGD.cpp
    src/DnnTrainerSGD.h
    src/Error.cpp
    src/Error.h
    src/JpegFile.cpp
    src/JpegFile.h
    src/Matrix.cpp
    src/Matrix.h
    src/Utility.cpp
    src/Utility.h
    test/main.cpp
    test/test2D.cpp
    test/test2D.hpp
    test/test2Layer.cpp
    test/test2Layer.hpp
    test/testBuilder.cpp
    test/testBuilder.hpp
    test/testCifar10.cpp
    test/testCifar10.hpp
    test/testFullyConnected.cpp
    test/testFullyConnected.hpp
    test/testIO.cpp
    test/testIO.hpp
    test/TestMatrix.cpp
    test/TestMatrix.hpp)

add_executable(tfs_dnn ${SOURCE_FILES})